tests/ast_interpreter/str.expected
null
true
42
4.2
abc
<string>:7:11: error: function str expects 1 argument, but 0 were provided
    print(str());
          ^^^^^
